# datapack

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  maven_install.json
Localization-Resource-Pack/: BUILD.bazel  NEWS.md  README.md  languages.json  pack.mcmeta
Localization-Resource-Pack/assets/: system_prompt.md  user_prompt.md
Localization-Resource-Pack/assets/all_need/lang/: en_us.json  zh_cn.json
Localization-Resource-Pack/assets/localization_resource_pack/lang/: en_us.json  zh_cn.json
Localization-Resource-Pack/assets/white_elephant/lang/: en_us.json  zh_cn.json
Lucky-Block-Island/: NEWS.md  (+2 more)
ReplaceBlock/: BUILD.bazel  NEWS.md  README.md
ReplaceBlock/data/minecraft/tags/function/: load.json  tick.json
ReplaceBlock/data/replace_block/function/: child_fill.mcfunction  child_if_loaded.mcfunction  if_loaded.mcfunction  load.mcfunction  main.mcfunction  parent_fill.mcfunction  reset_settings.mcfunction  schedule.mcfunction  tick.mcfunction  traversal_chunk.mcfunction
ReplaceBlock/data/replace_block/function/api/: call_main.mcfunction  check_config.mcfunction  execute.mcfunction  reset_settings.mcfunction
ReplaceBlock/data/replace_block/function/child_traversal_chunk/: x-.mcfunction  x.mcfunction  z-.mcfunction  z.mcfunction
ReplaceBlock/data/replace_block/function/fill/: call_fill.mcfunction  command.mcfunction  get_dimension.mcfunction  main.mcfunction  old.mcfunction  traversal_dimension.mcfunction  traversal_list.mcfunction
ReplaceBlock/data/replace_block/function/main/: main.mcfunction
ReplaceBlock/data/replace_block/function/parent/: if_loaded.mcfunction  parent_fill.mcfunction
ReplaceBlock/data/replace_block/function/traversal/: fill.mcfunction  find_chunk.mcfunction  traversal_chunk.mcfunction
SetBlock-TNT/: BUILD.bazel  NEWS.md  README.md
SetBlock-TNT/data/minecraft/tags/function/: load.json  tick.json
SetBlock-TNT/data/setblock_tnt/function/: load.enjoy.mcfunction  load.mcfunction  tick.mcfunction
SetBlock-TNT/data/setblock_tnt/functions/: start.mcfunction
anvil-falling/: BUILD.bazel  README.md
anvil-falling/data/anvil_falling/function/: load.mcfunction  things.mcfunction  tick.mcfunction
anvil-falling/data/minecraft/tags/function/: load.json  tick.json
auto-lucky-block/: BUILD.bazel  NEWS.md  README.md
auto-lucky-block/data/auto_lucky_block/function/: load.enjoy.mcfunction  load.mcfunction  main.mcfunction  setblock.mcfunction  start.enjoy.mcfunction  things.mcfunction  tick.mcfunction
auto-lucky-block/data/auto_lucky_block/function/redstone/: 0.mcfunction  12.mcfunction  13.mcfunction  15.mcfunction  2.mcfunction  3.mcfunction  5.mcfunction  9.mcfunction
auto-lucky-block/data/auto_lucky_block/functions/: start.mcfunction
auto-lucky-block/data/auto_lucky_block/functions/redstone/: 1.mcfunction  10.mcfunction  11.mcfunction  14.mcfunction  4.mcfunction  6.mcfunction  7.mcfunction  8.mcfunction
auto-lucky-block/data/minecraft/tags/function/: load.json  tick.json
auto-lucky-block/data/minecraft/tags/functions/: load.json  tick.json
datapack-function-library/: BUILD.bazel  NEWS.md  README-en_us.md  README.md
datapack-function-library/data/dfl/dialog/: lgpl.json
datapack-function-library/data/dfl/function/: dfl_enable.mcfunction  load.enjoy.mcfunction  load.mcfunction
datapack-function-library/data/dfl/function/child/: smelt.mcfunction
datapack-function-library/data/dfl/function/lib/: change_max_health.mcfunction  clear.mcfunction  create_glass_box.mcfunction  datapack_banner.mcfunction  day.mcfunction  daytime.mcfunction  entity.mcfunction  entity_density.mcfunction  fill_outline.mcfunction  force_death_drops.mcfunction  gametime.mcfunction  generate_player_id.mcfunction  get_game_day.mcfunction  item.mcfunction  other_entity.mcfunction  player_id.mcfunction  players.mcfunction  spawn.mcfunction  things_count.mcfunction
datapack-function-library/data/dfl/function/redstone/: kill_item.mcfunction  show_entity.mcfunction
datapack-function-library/data/dfl/function/start/: addteam.mcfunction  disable_special_damage.mcfunction  nodamage.mcfunction  set_world_spawn.mcfunction  setworldspawn.mcfunction
datapack-function-library/data/dfl/function/tick/: always_sunny.mcfunction  ban.mcfunction  beacon_fly.mcfunction  change_block.mcfunction  clear_and_execute_multiple.mcfunction  clear_and_execute_single.mcfunction  clear_run_a.mcfunction  clear_run_b.mcfunction  convert_items_to_xp.mcfunction  create_rescue_platform.mcfunction  debuff.mcfunction  disable_friendly_fire.mcfunction  iron_block_elevator.mcfunction  keep_have_things.mcfunction  kill.mcfunction  kill_better.mcfunction  kill_by_density.mcfunction  kill_excess_entities.mcfunction  kill_tnt.mcfunction  maintain_item_count.mcfunction  mith.mcfunction  relax.mcfunction  show_entity.mcfunction  slime.mcfunction  smelt.mcfunction  soft_ban_player.mcfunction  suicide.mcfunction  team.mcfunction  things_to_xp.mcfunction  tpa.mcfunction
datapack-function-library/data/dfl/function/timer/: clear_items.mcfunction
datapackets-functions-LIB/: BUILD.bazel  README-en_us.md
datapackets-functions-LIB/data/dfl/dialog/: gpl.json
datapackets-functions-LIB/data/dfl/function/: load.enjoy.mcfunction
game/: BUILD.bazel  ops.json
highly-toxic-water/: BUILD.bazel  README.md
highly-toxic-water/data/highly_toxic_water/function/: start.enjoy.mcfunction  start.mcfunction  things.mcfunction
rule/dialog_processor/: BUILD.bazel  DialogProcessor.java
rule/enjoy_expander/: BUILD.bazel  EnjoyExpander.java
rule/json_compressor/: BUILD.bazel  JsonCompressor.java
rule/json_merger/: BUILD.bazel  JsonMerger.java
stone-disappearance/: BUILD.bazel  NEWS.md  README.md
stone-disappearance/data/stone_disappearance/dialog/: about.json  advanced.json  advanced_common.json  advanced_end.json  advanced_nether.json  advanced_overworld.json  custom_menu.json  custom_options.json  new_player.json  options.json  performance.json
stone-disappearance/data/stone_disappearance/function/: load.enjoy.mcfunction  load.mcfunction  things.mcfunction  tick.mcfunction
(+218 files in other folders)
