module(
    name = "datapack",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_java", version = "8.15.2")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_file(
    name = "jfinal_enjoy_binary",
    url = "https://repo1.maven.org/maven2/com/jfinal/enjoy/5.2.5/enjoy-5.2.5.jar",
    integrity = "sha256-sS/QkGXkbJbDAvbb44G0Kr1bIwt8Xl1zrukNYx1XUmI=",
    downloaded_file_path = "enjoy-5.2.5.jar",
)
http_file(
    name = "jfinal_enjoy_source",
    url = "https://repo1.maven.org/maven2/com/jfinal/enjoy/5.2.5/enjoy-5.2.5-sources.jar",
    integrity = "sha256-Dn5yGUFGqBR6l7xz/g8LoPm30CUdMeywxegL1hvTZpM=",
    downloaded_file_path = "enjoy-5.2.5-sources.jar",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "unif-logger",
    url = "https://cdn.modrinth.com/data/ATVC2dJr/versions/qESWh4KO/UniF-Logger-1.0.0.zip",
    sha256 = "c65e360caa1bef72801df7026ec0abe4a6a4718fc2a9f7f359ec60563b97d4b2",
    build_file = "@//third_party/unif-logger:BUILD.unif-logger.bazel",
    patch_strip = 1,
    patches = [
        "@//third_party/unif-logger/patches:license.patch",
    ],
)

minecraft = use_extension("//repo:minecraft_jar.bzl", "minecraft")
minecraft.minecraft_jar(
    version = "1.21.8",
    type = "server",
    mapping = True,
)
use_repo(minecraft, "minecraft")
use_repo(minecraft, "minecraft_assets")
