load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

pkg_files(
    name = "localization_resource_pack_assets",
    srcs = glob(["assets/**"]),
    strip_prefix = "",
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "Localization-Resource-Pack",
    srcs = [
        ":README.md",
        ":localization_resource_pack_assets",
        ":pack.png",
        "//template:mcmeta",
    ],
)
