load("@//rule:upload_modrinth.bzl", "upload_modrinth")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

pack_version = "1.5"

game_versions = [
    "1.13",
    "1.13.1",
    "1.13.2",
    "1.14",
    "1.14.1",
    "1.14.2",
    "1.14.3",
    "1.14.4",
    "1.15",
    "1.15.1",
    "1.15.2",
    "1.16",
    "1.16.1",
    "1.16.2",
    "1.16.3",
    "1.16.4",
    "1.16.5",
    "1.17",
    "1.17.1",
    "1.18",
    "1.18.1",
    "1.18.2",
    "1.19",
    "1.19.1",
    "1.19.2",
    "1.19.3",
    "1.19.4",
    "1.20",
    "1.20.1",
    "1.20.2",
    "1.20.3",
    "1.20.4",
    "1.20.5",
    "1.20.6",
    "1.21",
    "1.21.1",
    "1.21.2",
    "1.21.3",
    "1.21.4",
    "1.21.5",
    "1.21.6",
    "1.21.7",
    "1.21.8",
    "1.21.9",
]

pkg_files(
    name = "localization_resource_pack_assets",
    srcs = glob(["assets/**"]),
    strip_prefix = "",
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "Localization-Resource-Pack",
    srcs = [
        ":README.md",
        ":localization_resource_pack_assets",
        ":pack.mcmeta",
        ":pack.png",
    ],
)

upload_modrinth(
    name = "upload_modrinth",
    changelog = "NEWS.md",
    file = ":Localization-Resource-Pack",
    file_name = "Localization-Resource-Pack_v%s.zip" % pack_version,
    game_versions = game_versions,
    loaders = ["minecraft"],
    project_id = "3S0b1XES",
    token_secret_id = "modrinth_token",
    version_id = pack_version,
    version_name = "Localization-Resource-Pack_v%s" % pack_version,
    version_type = "release",
)
