load("@//rule:datapack.bzl", "minecraft_versions_range")
load("@//rule:merge_json.bzl", "merge_json")
load("@//rule:upload_modrinth.bzl", "upload_modrinth")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")

pack_version = "2.2.0"

pack_name = "Localization-Resource-Pack"

game_versions = minecraft_versions_range("1.13")

file_name = "%s_v%s.zip" % (pack_name, pack_version)

version_name = "%s_v%s" % (pack_name, pack_version)

git_tag_name = "%s_v%s" % (pack_name, pack_version)

# 合并assets和translate目录中的JSON文件
merge_json(
    name = "merged_translations",
    srcs = glob(
        ["assets/**/*.json"],
        allow_empty = True,
    ) + [
        "//:translate_files",
    ],
)

pkg_files(
    name = "localization_resource_pack_assets",
    srcs = [":merged_translations"],
    strip_prefix = "",
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = pack_name,
    srcs = [
        ":README.md",
        ":localization_resource_pack_assets",
        ":pack.mcmeta",
        ":pack.png",
    ],
)

upload_modrinth(
    name = "upload_modrinth",
    changelog = "NEWS.md",
    file = ":" + pack_name,
    file_name = file_name,
    game_versions = game_versions,
    git_tag_name = git_tag_name,
    loaders = ["minecraft"],
    project_id = "3S0b1XES",
    token_secret_id = "modrinth_token",
    version_id = pack_version,
    version_name = version_name,
    version_type = "release",
)