load("@//rule:datapack.bzl", "complete_datapack_config", "minecraft_versions_range")

pack_version = "1.0.0"

complete_datapack_config(
    game_versions = minecraft_versions_range("1.20.3"),
    modrinth_project_id = "x9cTWnQD",
    pack_id = "setblock_tnt",
    pack_version = pack_version,
    deps = [
        "README.md",
        "pack.png",
        "//:license_gpl",
        "//datapack-function-library:dfl",
    ],
)
