load("@//rule:datapack.bzl", "complete_datapack_config", "minecraft_versions_range")

pack_version = "2.0"

complete_datapack_config(
    game_versions = minecraft_versions_range("1.14.3","1.20.2"),
    modrinth_project_id = "iLfrlAo2",
    pack_id = "auto_lucky_block",
    pack_version = pack_version,
    deps = [
        "README.md",
        "pack.png",
        "//:license_gpl",
        "//datapack-function-library:dfl",
        "@unif-logger//:unif-logger",
    ],
)
