load("@//rule:datapack.bzl", "MINECRAFT_VERSIONS_1_13_TO_1_21", "complete_datapack_config")

pack_version = "4.4"

complete_datapack_config(
    changelog = "NEWS.md",
    game_versions = MINECRAFT_VERSIONS_1_13_TO_1_21,
    modrinth_project_id = "xfcXTP3W",
    pack_id = "dfl",
    pack_version = pack_version,
    visibility = ["//visibility:public"],
    deps = [
        "LICENSE",
        "README.md",
        "README-en_us.md",
        "pack.png",
        "@unif-logger//:unif-logger",
    ],
)
