load("@//rule:datapack.bzl", "MINECRAFT_VERSIONS_1_13_TO_1_21", "complete_datapack_config")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup")

pack_version = "4.4"

# 主要的数据包配置，目标名称为包名称
complete_datapack_config(
    changelog = "NEWS.md",
    game_versions = MINECRAFT_VERSIONS_1_13_TO_1_21,
    modrinth_project_id = "xfcXTP3W",
    pack_id = "dfl",
    pack_version = pack_version,
    visibility = ["//visibility:public"],
    deps = [
        "LICENSE",
        "README.md",
        "README-en_us.md",
        "pack.png",
        "@unif-logger//:unif-logger",
    ],
)

# 创建只包含dfl命名空间的目标，供其他数据包依赖
pkg_filegroup(
    name = "dfl",
    srcs = [
        ":datapack-function-library_pack_function",
        ":datapack-function-library_pack_dialog",
    ],
    visibility = ["//visibility:public"],
)
