load("@//rule:datapack.bzl", "complete_datapack_config", "minecraft_versions_range")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup")

pack_version = "4.0.1"

# 主要的数据包配置，目标名称为包名称
complete_datapack_config(
    game_versions = minecraft_versions_range("1.13"),
    modrinth_project_id = "xfcXTP3W",
    pack_id = "dfl",
    pack_version = pack_version,
    visibility = ["//visibility:public"],
    deps = [
        "LICENSE",
        "README.md",
        "README-en_us.md",
        "pack.png",
        "@unif-logger//:unif-logger",
    ],
)

# 创建只包含dfl命名空间的目标，供其他数据包依赖
pkg_filegroup(
    name = "dfl",
    srcs = [
        ":datapack-function-library_pack_function",
        ":datapack-function-library_pack_namespace_json",
    ],
    visibility = ["//visibility:public"],
)
