load("@//rule:datapack.bzl", "datapack")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "pkg_filegroup")

pkg_files(
    name = "readme_dir",
    srcs = glob(["README/*"]),
    prefix = "README",
)

datapack(
    name = "datapackets-functions-LIB",
    pack_id = "dfl",
    functions_expand = glob(["data/dfl/function/**/*.enjoy.mcfunction"]),
    functions = glob(
        include = ["data/dfl/function/**/*.mcfunction"],
        exclude = ["data/dfl/function/**/*.enjoy.mcfunction"],
    ),
    tags = glob(["data/minecraft/tags/function/*.json"]),
    deps = [
        "README.md",
        "README-en_us.md",
        ":readme_dir",
        "LICENSE",
        "pack.png",
        "@unif-logger//:unif_logger_functions",
        "@unif-logger//:unif_logger_license",
        "@unif-logger//:unif_logger_tags",
    ],
)

pkg_filegroup(
    name = "dfl",
    visibility = ["//visibility:public"],
    srcs = [
        ":datapackets-functions-LIB_pack_function",
        ":datapackets-functions-LIB_pack_function_legacy",
    ],
)

alias(
    name = "server",
    actual = ":datapackets-functions-LIB_server",
)
