load("@//rule:datapack.bzl", "datapack")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")

datapack(
    name = "datapackets-functions-LIB",
    functions = glob(
        include = ["data/dfl/function/**/*.mcfunction"],
        exclude = ["data/dfl/function/**/*.enjoy.mcfunction"],
    ),
    functions_expand = glob(["data/dfl/function/**/*.enjoy.mcfunction"]),
    pack_id = "dfl",
    tags = glob(["data/minecraft/tags/function/*.json"]),
    deps = [
        "LICENSE",
        "README.md",
        "README-en_us.md",
        "pack.png",
        "@unif-logger//:unif_logger_functions",
        "@unif-logger//:unif_logger_license",
        "@unif-logger//:unif_logger_tags",
    ],
)

pkg_filegroup(
    name = "dfl",
    srcs = [
        ":datapackets-functions-LIB_pack_function",
        ":datapackets-functions-LIB_pack_function_legacy",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "server",
    actual = ":datapackets-functions-LIB_server",
)
