load("@//rule:datapack.bzl", "datapack")
load("@//rule:upload_modrinth.bzl", "modrinth_dependency", "upload_modrinth")
load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files")

pack_version = "4.4"

game_versions = [
    "1.13",
    "1.13.1",
    "1.13.2",
    "1.14",
    "1.14.1",
    "1.14.2",
    "1.14.3",
    "1.14.4",
    "1.15",
    "1.15.1",
    "1.15.2",
    "1.16",
    "1.16.1",
    "1.16.2",
    "1.16.3",
    "1.16.4",
    "1.16.5",
    "1.17",
    "1.17.1",
    "1.18",
    "1.18.1",
    "1.18.2",
    "1.19",
    "1.19.1",
    "1.19.2",
    "1.19.3",
    "1.19.4",
    "1.20",
    "1.20.1",
    "1.20.2",
    "1.20.3",
    "1.20.4",
    "1.20.5",
    "1.20.6",
    "1.21",
    "1.21.1",
    "1.21.2",
    "1.21.3",
    "1.21.4",
    "1.21.5",
    "1.21.6",
    "1.21.7",
    "1.21.8",
]

datapack(
    name = "datapackets-functions-LIB",
    functions = glob(
        include = ["data/dfl/function/**/*.mcfunction"],
        exclude = ["data/dfl/function/**/*.enjoy.mcfunction"],
    ),
    functions_expand = glob(["data/dfl/function/**/*.enjoy.mcfunction"]),
    pack_id = "dfl",
    tags = glob(["data/minecraft/tags/function/*.json"]),
    deps = [
        "LICENSE",
        "README.md",
        "README-en_us.md",
        "pack.png",
        "//Localization-Resource-Pack:localization_resource_pack_assets",
        "@unif-logger//:unif-logger",
    ],
)

pkg_filegroup(
    name = "dfl",
    srcs = [
        ":datapackets-functions-LIB_pack_function",
        ":datapackets-functions-LIB_pack_function_legacy",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "server",
    actual = ":datapackets-functions-LIB_server",
)

modrinth_dependency(
    name = "localization_resource_pack",
    dependency_type = "required",
    project_id = "3S0b1XES",
    version_id = "Td6iicSl",
)

upload_modrinth(
    name = "upload_modrinth",
    file = ":datapackets-functions-LIB",
    file_name = "datapackets functions LIB_v%s_1.13-1.21.x.zip" % pack_version,
    game_versions = game_versions,
    loaders = ["datapack"],
    project_id = "hBREgRLV",
    token_secret_id = "modrinth_token",
    version_id = pack_version,
    version_name = "[data pack] datapackets functions LIB_v%s_1.13-1.21.x" % pack_version,
    version_type = "release",
    deps = [
        ":localization_resource_pack",
    ],
)
