load("@//rule:datapack.bzl", "datapack")
load("@//rule:upload_modrinth.bzl", "modrinth_dependency", "upload_modrinth")

pack_version = "3.1"

game_versions = [
    "1.20",
    "1.20.1",
    "1.20.2",
    "1.20.3",
    "1.20.4",
    "1.20.5",
    "1.20.6",
    "1.21",
    "1.21.1",
    "1.21.2",
    "1.21.3",
    "1.21.4",
    "1.21.5",
    "1.21.6",
    "1.21.7",
    "1.21.8",
]

modrinth_dependency(
    name = "localization_resource_pack",
    dependency_type = "required",
    project_id = "3S0b1XES",
    version_id = "80LeoUFR",
)

# 基础函数文件（排除 enjoy 文件）
_base_functions = glob(
    include = ["data/stone_disappearance/function/**/*.mcfunction"],
    exclude = [
        "data/stone_disappearance/function/**/*.enjoy.mcfunction",
    ],
)

datapack(
    name = "stone-disappearance",
    dialogs = glob(
        ["data/stone_disappearance/dialog/*.json"],
        allow_empty = True,
    ),
    function_tags = glob(["data/minecraft/tags/function/*.json"]),
    # 条件性地包含 dialog 处理结果
    functions = _base_functions,
    functions_expand = glob(["data/stone_disappearance/function/**/*.enjoy.mcfunction"]),
    minecraft_dialog_tags = glob(
        ["data/minecraft/tags/dialog/*.json"],
        allow_empty = True,
    ),
    pack_id = "stone_disappearance",
    deps = [
        "README.md",
        "pack.png",
        "//:license_gpl",
        "//datapack-function-library:dfl",
        "@unif-logger//:unif-logger",
    ],
)

alias(
    name = "server",
    actual = ":stone-disappearance_server",
)

upload_modrinth(
    name = "upload_modrinth",
    changelog = "NEWS.md",
    file = ":stone-disappearance",
    file_name = "stone-disappearance_v%s_1.20+.zip" % pack_version,
    game_versions = game_versions,
    loaders = ["datapack"],
    project_id = "WD7HqNGg",
    token_secret_id = "modrinth_token",
    version_id = pack_version,
    version_name = "[data pack] stone-disappearance_v%s_1.20+" % pack_version,
    version_type = "release",
    deps = [
        ":localization_resource_pack",
    ],
)
