load("@//rule:datapack.bzl", "MINECRAFT_VERSIONS_1_20_PLUS", "complete_datapack_config")

pack_version = "3.1"

complete_datapack_config(
    changelog = "NEWS.md",
    game_versions = MINECRAFT_VERSIONS_1_20_PLUS,
    modrinth_project_id = "WD7HqNGg",
    pack_id = "stone_disappearance",
    pack_version = pack_version,
    deps = [
        "README.md",
        "pack.png",
        "//:license_gpl",
        "//datapack-function-library:dfl",
        "@unif-logger//:unif-logger",
    ],
)
