load("@//rule:datapack.bzl", "complete_datapack_config", "minecraft_versions_range")

pack_version = "4.3.0"

complete_datapack_config(
    game_versions = minecraft_versions_range("1.20.3"),
    modrinth_project_id = "WD7HqNGg",
    pack_id = "stone_disappearance",
    pack_version = pack_version,
    deps = [
        "README.md",
        "pack.png",
        "//:license_gpl",
        "//datapack-function-library:dfl",
        "@unif-logger//:unif-logger",
    ],
)
